--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap");
+
 html,
 body {
+  font-family: Inconsolata;
   background: #cad2c5;
   color: #2f3e46;
 }
