--- a/src/style.css
+++ b/src/style.css
@@ -6,3 +6,24 @@ body {
   background: #cad2c5;
   color: #2f3e46;
 }
+
+.styled-scrollbars {
+  /* Foreground, Background */
+  scrollbar-color: #354f52 #cad2c5;
+}
+.styled-scrollbars::-webkit-scrollbar {
+  width: 1vw;
+}
+.styled-scrollbars::-webkit-scrollbar-thumb {
+  /* Foreground */
+  background-color: #354f52;
+  transition: background-color 1s;
+}
+.styled-scrollbars:hover::-webkit-scrollbar-thumb {
+  /* Foreground */
+  background: #2f3e46;
+}
+.styled-scrollbars::-webkit-scrollbar-track {
+  /* Background */
+  background: #cad2c5;
+}
